# csv2json

./: Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml
kubernetes/: mbxai-resource.yaml
src/csv2json/: __init__.py  app.py  config.py
src/csv2json/api/: __init__.py  run.py  server.py
src/csv2json/project/: __init__.py  api.py
src/csv2json/templates/: base.html  converter.html
tests/: __init__.py
