[project]
name = "csv2json"
version = "0.1.0"
description = "Tool to convert csv into json"
authors = [{ name = "Mike Bertram", email = "contact@mibexx.de" }]
readme = "README.md"
packages = [
    { include = "src" }
]
requires-python = ">=3.12,<3.13"
license = "MIT"
dependencies = [
    "flask>=2.3.0",
    "flask-wtf>=1.2.0",
    "wtforms>=3.0.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.8.0",
    "pydantic>=2.10.6",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "python-dotenv>=1.0.0",
    ]

[project.scripts]
service = "src.csv2json.api.run:main"
ui = "src.csv2json.app:run_server"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I"]

